multiple frontend updates and addons, posibility to add image to trail and edit it, appears on the trails list too, edit picture of the trail, footer and some other trail_list future stuff paved the way for it, some other minor modifications

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 django-crispy-forms = "*"
 gunicorn = "*"
 whitenoise = "*"
+django-allauth = "*"
+pillow = "*"
 
 [dev-packages]
 pylint = "*"
