added feedback link, hidden contact link, added google tracking code

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ gunicorn = "*"
 whitenoise = "*"
 django-allauth = "*"
 pillow = "*"
+heroku = "*"
+django-heroku = "*"
 
 [dev-packages]
 pylint = "*"
